<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_login_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_login"
        style="@style/base_tb" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_username"
            style="@style/base_et"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_username"
            android:inputType="text"
            android:text="" />

        <EditText
            android:id="@+id/et_pwd"
            style="@style/base_et"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/hint_pwd"
            android:inputType="textPassword"
            android:text="" />

        <Button
            android:id="@+id/btn_login"
            style="@style/base_btn"
            android:layout_width="match_parent"
            android:layout_marginTop="55dp"
            android:onClick="toLogin"
            android:text="@string/hint_login_btn" />

    </LinearLayout>

</LinearLayout>